changed techstack view based on screen size

--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -1032,10 +1032,6 @@ body > div.z-\[1070\] > div > div > div.flex.flex-row.items-center.justify-betwe
   color: rgb(var(--color-content));
 }
 
-body > div.z-\[1070\] > div > div > div.flex.flex-row.items-center.\!justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
-  color: rgb(var(--color-content)) !important;
-}
-
 #contactform-service:focus {
   background-color: rgb(var(--color-primary));
   outline: none;
@@ -4577,20 +4573,12 @@ input.tab:checked + .tab-content,
   height: 8rem;
 }
 
-.h-36 {
-  height: 9rem;
-}
-
 .h-4 {
   height: 1rem;
 }
 
 .h-40 {
   height: 10rem;
-}
-
-.h-44 {
-  height: 11rem;
 }
 
 .h-5 {
@@ -4617,12 +4605,12 @@ input.tab:checked + .tab-content,
   height: 1.125rem;
 }
 
-.h-\[100\%\] {
-  height: 100%;
-}
-
 .h-\[3px\] {
   height: 3px;
+}
+
+.h-\[486px\] {
+  height: 486px;
 }
 
 .h-\[600px\] {
@@ -4669,54 +4657,6 @@ input.tab:checked + .tab-content,
   height: 100vh;
 }
 
-.h-60 {
-  height: 15rem;
-}
-
-.h-\[50\] {
-  height: 50;
-}
-
-.h-\[50\$\] {
-  height: 50$;
-}
-
-.h-\[50\%\] {
-  height: 50%;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-72 {
-  height: 18rem;
-}
-
-.h-\[700px\] {
-  height: 700px;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[80\%\] {
-  height: 80%;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[px\] {
-  height: px;
-}
-
-.h-\[486px\] {
-  height: 486px;
-}
-
 .max-h-14 {
   max-height: 3.5rem;
 }
@@ -4727,14 +4667,6 @@ input.tab:checked + .tab-content,
 
 .max-h-full {
   max-height: 100%;
-}
-
-.max-h-60 {
-  max-height: 15rem;
-}
-
-.max-h-32 {
-  max-height: 8rem;
 }
 
 .min-h-36 {
@@ -4921,10 +4853,6 @@ input.tab:checked + .tab-content,
 
 .w-screen {
   width: 100vw;
-}
-
-.w-9\/12 {
-  width: 75%;
 }
 
 .min-w-0 {
@@ -5234,10 +5162,6 @@ input.tab:checked + .tab-content,
 
 .justify-between {
   justify-content: space-between;
-}
-
-.\!justify-between {
-  justify-content: space-between !important;
 }
 
 .justify-around {
@@ -7316,10 +7240,6 @@ body > div.z-\[1070\] > div > div > :is(.dark .dark\:hover\:bg-transparent:hover
   body > div.z-\[1070\] > div > div > div.sm\:flex-row.flex.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
     color: rgb(var(--color-content));
   }
-
-  body > div.z-\[1070\] > div > div > div.sm\:w-full.flex.flex-row.items-center.justify-between.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
-    color: rgb(var(--color-content));
-  }
 }
 
 @media (min-width: 768px) {
@@ -8558,12 +8478,8 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     width: fit-content;
   }
 
-  .sm\:w-48 {
-    width: 12rem;
-  }
-
-  .sm\:w-full {
-    width: 100%;
+  .sm\:w-\[65\%\] {
+    width: 65%;
   }
 
   .sm\:flex-row {
@@ -8582,11 +8498,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .sm\:bg-red-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(248 113 113 / var(--tw-bg-opacity));
   }
 
   .sm\:px-12 {
@@ -8635,22 +8546,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 
   .md\:h-\[400px\] {
     height: 400px;
-  }
-
-  .md\:h-60 {
-    height: 15rem;
-  }
-
-  .md\:h-40 {
-    height: 10rem;
-  }
-
-  .md\:h-full {
-    height: 100%;
-  }
-
-  .md\:h-48 {
-    height: 12rem;
   }
 
   .md\:w-10 {
@@ -8702,14 +8597,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     width: fit-content;
   }
 
-  .md\:w-40 {
-    width: 10rem;
-  }
-
-  .md\:w-4 {
-    width: 1rem;
-  }
-
   .md\:w-full {
     width: 100%;
   }
@@ -8754,14 +8641,8 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     justify-self: end;
   }
 
-  .md\:bg-red-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-  }
-
-  .md\:bg-cyan-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(34 211 238 / var(--tw-bg-opacity));
+  .md\:p-4 {
+    padding: 1rem;
   }
 
   .md\:px-5 {
@@ -8797,6 +8678,11 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 992px) {
@@ -8818,16 +8704,12 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     height: 3.5rem;
   }
 
-  .lg\:h-48 {
-    height: 12rem;
-  }
-
-  .lg\:h-4 {
-    height: 1rem;
-  }
-
   .lg\:h-44 {
     height: 11rem;
+  }
+
+  .lg\:w-52 {
+    width: 13rem;
   }
 
   .lg\:w-9\/12 {
@@ -8837,26 +8719,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   .lg\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
-  }
-
-  .lg\:w-48 {
-    width: 12rem;
-  }
-
-  .lg\:w-32 {
-    width: 8rem;
-  }
-
-  .lg\:w-5 {
-    width: 1.25rem;
-  }
-
-  .lg\:w-56 {
-    width: 14rem;
-  }
-
-  .lg\:w-52 {
-    width: 13rem;
   }
 
   .lg\:max-w-\[80\%\] {
@@ -8881,11 +8743,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 
   .lg\:gap-4 {
     gap: 1rem;
-  }
-
-  .lg\:bg-red-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(248 113 113 / var(--tw-bg-opacity));
   }
 
   .lg\:px-14 {
