--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -4657,6 +4657,26 @@ input.tab:checked + .tab-content,
   height: 100vh;
 }
 
+.h-44 {
+  height: 11rem;
+}
+
+.h-56 {
+  height: 14rem;
+}
+
+.h-\[60\%\] {
+  height: 60%;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
 .max-h-14 {
   max-height: 3.5rem;
 }
@@ -5118,6 +5138,10 @@ input.tab:checked + .tab-content,
 
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -5787,6 +5811,11 @@ input.tab:checked + .tab-content,
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -5882,6 +5911,11 @@ input.tab:checked + .tab-content,
 
 .stroke-white\/20 {
   stroke: rgb(255 255 255 / 0.2);
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -6504,6 +6538,10 @@ input.tab:checked + .tab-content,
   color: rgb(202 138 4 / var(--tw-text-opacity));
 }
 
+.text-contentLinkHover\/90 {
+  color: rgb(var(--color-content-link-hover) / 0.9);
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -6732,6 +6770,11 @@ input.tab:checked + .tab-content,
 
 .brightness-50 {
   --tw-brightness: brightness(.5);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.brightness-125 {
+  --tw-brightness: brightness(1.25);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -7757,6 +7800,16 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:shadow-shadow:hover {
+  --tw-shadow-color: rgb(var(--color-shadow) / 1);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:shadow-shadow\/50:hover {
+  --tw-shadow-color: rgb(var(--color-shadow) / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .hover\:outline-none:hover {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -8131,6 +8184,10 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 .group:hover .group-hover\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:opacity-50 {
+  opacity: 0.5;
 }
 
 .peer\/showLabel:checked ~ .peer-checked\/showLabel\:max-h-\[100\%\] {
