--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -4666,6 +4666,10 @@ input.tab:checked + .tab-content,
   height: 1.125rem;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
 .h-\[3px\] {
   height: 3px;
 }
@@ -5195,6 +5199,10 @@ input.tab:checked + .tab-content,
 
 .grid-flow-col {
   grid-auto-flow: column;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-5 {
@@ -5953,6 +5961,11 @@ input.tab:checked + .tab-content,
   stroke: rgb(255 255 255 / 0.2);
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -6428,6 +6441,11 @@ input.tab:checked + .tab-content,
 
 .text-contentLink\/80 {
   color: rgb(var(--color-content-link) / 0.8);
+}
+
+.text-contentLinkHover {
+  --tw-text-opacity: 1;
+  color: rgb(var(--color-content-link-hover) / var(--tw-text-opacity));
 }
 
 .text-contentLinkHover\/90 {
